# aoc

./: Cargo.toml
src/: main.rs
src/aoc_2015/: data.rs  mod.rs  solution.rs
src/aoc_2015/inputs/: input.rs
src/aoc_2015/parsing/: parser.rs
src/aoc_2022/: data.rs  mod.rs  parsing.rs  solution.rs
src/aoc_2022/inputs/: day_5_1.txt  input.rs
src/aoc_2022/parsing/: asm.rs  calorie.rs  command_line.rs  crane.rs  mod.rs  rps.rs  section.rs
src/aoc_2022/solution/: day_1.rs  day_10.rs  day_11.rs  day_12.rs  day_12_2.rs  day_13.rs  day_2.rs  day_3.rs  day_4.rs  day_5.rs  day_6.rs  day_7.rs  day_8.rs  day_9.rs  mod.rs
src/common/: parsing.rs
