[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
motif = { git = "https://github.com/Verdex/motif", tag = "release-0.2.0", version = "0.2.0" }
denest = { git = "https://github.com/Verdex/denest", tag = "release-0.1.0", version = "0.1.0" }
bending = { git = "https://github.com/Verdex/bending", tag = "release-0.1.0", version = "0.1.0" }